fix(CPU): fixed too big resource usage in blinking animation - separate SVG for that

--- a/css/interface.css
+++ b/css/interface.css
@@ -149,8 +149,10 @@ body {
   display: none !important;
 }
 
-.view--inline {
-  display: inline;
+.view--block {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 /* Level selector */
@@ -313,7 +315,19 @@ body {
     /* Allow <svg> to be 100% height */
     font-size: 0;
 }
-#game > svg {
+#game > svg.blink-svg {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    transform: translateZ(0);
+}
+#game > svg.blink-svg.hidden {
+  display: none;
+}
+#game > svg.game-svg {
     width: 100%;
     height: 100%;
     position: relative;
@@ -340,27 +354,29 @@ body {
 }
 
 @-webkit-keyframes glowing  {
-  0% { fill: rgba(255, 255, 255, 0.2); }
-  50% { fill: rgba(152, 230, 152, 0.5); }
-  100% { fill: rgba(255, 255, 255, 0.2); }
+  0% { fill-opacity: 0; }
+  50% { fill-opacity: 0.5; }
+  100% { fill-opacity: 0; }
 }
 @-moz-keyframes glowing {
-  0% { fill: rgba(255, 255, 255, 0.2); }
-  50% { fill: rgba(152, 230, 152, 0.5); }
-  100% { fill: rgba(255, 255, 255, 0.2); }
+  0% { fill-opacity: 0; }
+  50% { fill-opacity: 0.5; }
+  100% { fill-opacity: 0; }
 }
 @-o-keyframes glowing {
-  0% { fill: rgba(255, 255, 255, 0.2); }
-  50% { fill: rgba(152, 230, 152, 0.5); }
-  100% { fill: rgba(255, 255, 255, 0.2); }
+  0% { fill-opacity: 0; }
+  50% { fill-opacity: 0.5; }
+  100% { fill-opacity: 0; }
 }
 @keyframes glowing  {
-  0% { fill: rgba(255, 255, 255, 0.2); }
-  50% { fill: rgba(152, 230, 152, 0.5); }
-  100% { fill: rgba(255, 255, 255, 0.2); }
+  0% { fill-opacity: 0; }
+  50% { fill-opacity: 0.5; }
+  100% { fill-opacity: 0; }
 }
 
-.navigation-controls .next-level > circle {
+.navigation-controls .next-level > circle.glowing {
+  fill: rgb(0, 255, 0);
+  fill-opacity: 0.2;
   -webkit-animation: glowing 1500ms infinite;
   -moz-animation: glowing 1500ms infinite;
   -o-animation: glowing 1500ms infinite;
